--- a/investor_demo.html
+++ b/investor_demo.html
@@ -26,6 +26,7 @@
             left: 0;
             right: 0;
             background: rgba(10, 10, 10, 0.95);
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             padding: 15px 30px;
             z-index: 1000;
@@ -77,6 +78,7 @@
             border: 1px solid #8A2BE2;
             border-radius: 10px;
             padding: 15px;
+            -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
         }
 
