--- a/investor_demo.html
+++ b/investor_demo.html
@@ -247,6 +247,18 @@
             border: 1px solid #FFD700;
         }
 
+        .mobile-title {
+            color: #8A2BE2;
+            font-size: 12px;
+            margin-bottom: 10px;
+        }
+
+        .mobile-controls-text {
+            color: #00CED1;
+            font-size: 10px;
+            margin-top: 15px;
+        }
+
         /* Investor Features List */
         .features-list {
             list-style: none;
@@ -491,13 +503,13 @@
                     <div class="phone-mockup">
                         <div class="phone-screen">
                             <div class="mobile-effect" id="mobileEffect">🌟</div>
-                            <div style="color: #8A2BE2; font-size: 12px; margin-bottom: 10px;">WebGPU Mobile</div>
+                            <div class="mobile-title">WebGPU Mobile</div>
                             <div class="mobile-controls">
                                 <div class="mobile-btn"></div>
                                 <div class="mobile-btn"></div>
                                 <div class="mobile-btn"></div>
                             </div>
-                            <div style="color: #00CED1; font-size: 10px; margin-top: 15px;">Touch • Haptic • Voice</div>
+                            <div class="mobile-controls-text">Touch • Haptic • Voice</div>
                         </div>
                     </div>
                 </div>
