--- a/react-demo.html
+++ b/react-demo.html
@@ -35,6 +35,7 @@
             background: rgba(31, 41, 55, 0.8);
             padding: 20px;
             border-radius: 12px;
+            -webkit-backdrop-filter: blur(10px);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(139, 92, 246, 0.3);
         }
